# www-v2

./: .gitignore  ARCHITECTURE.md  LICENSE  NOTES.md  Pipfile  README.md  build.py  build_wiki.py  cli.py  devenv.nix  dump.rdb  env.sample  fetch.py  format  lint  make-change-in-wiki.py  parser.py  pyproject.toml  requests_helper.py  requirements.txt  run-local-server.sh  save.py  serve.sh  server.py  server.sh  settings-example.toml  write_to_disk.py
app/: build_article.py  build_category_index.py  build_front_index.py  build_wiki.py  cli.py  copy_assets.py  delete_article.py  fetch.py  file_ops.py  local_server.py  log_to_file.py  main.py  make-change-in-wiki.py  make_article.py  make_change_in_wiki.py  parser.py  pretty_json_log.py  read_settings.py  requests_helper.py  save_article.py  server.py  template_utils.py  templates.py  views.py  write_to_disk.py
app/templates/: article.html  base.html  collaborators-index.html  event-index.html  header.html  index.html  meta.html  publishing-index.html  search-form.html  search-index.html  sitemap.html
app/views/: template_utils.py  views.py
app/views/templates/: article-index.html  article.html  base.html  collaborators-index.html  error.html  event-index.html  (+14 more)
assets/scripts/: events.js  tables.js
assets/styles/: base.css
static/: styles.css
static/scripts/: galleries.js  tables.js
static/styles/: base.css  styles.css
systemd/: hd-www-bg-task.service  hd-www-bg-task.timer  hd-www-frontend.service  hd-www-udp.service
templates/: article.html  base.html
unused/: build.py  dev-server.py  save.py
(+4 files in other folders)
